<resources>
    <string name="app_name">Github User</string>
    <string name="avatar">Avatar</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="company">Company: </string>
    <string name="location">Location: </string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="save_favorite">save favorite</string>
    <string name="detail">Detail User</string>
    <string name="followers">Followers %d</string>
    <string name="following">Following %d</string>
</resources>